--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,21 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+      base-path: /
+      path-mapping:
+        prometheus: /metrics
+#  metrics:
+#    distribution:
+#      percentiles-histogram:
+#        http.server.requests: true
+#      sla:
+#        http.server.requests: 300ms
+#  health:
+#    rabbit:
+#      enabled: false
+
 resilience4j.circuitbreaker:
     backends:
         nambawan:
